feat(recordings): 1st version